--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "next": "12.1.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "rc-progress": "^3.2.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "reactstrap": "^9.0.2"
   },
   "devDependencies": {
     "eslint": "8.14.0",
