--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "reactstrap": "^9.0.2"
+    "reactstrap": "^9.0.2",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "8.14.0",
