--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ramonak/react-progress-bar": "^5.0.0",
     "next": "12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
