about me responsive

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.0.0",
+    "babel-plugin-styled-components": "^2.0.7",
     "next": "12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
