--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
+    "react-scroll": "^1.8.7",
     "reactstrap": "^9.0.2",
     "styled-components": "^5.3.5"
   },
