--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "@ramonak/react-progress-bar": "^5.0.0",
     "babel-plugin-styled-components": "^2.0.7",
     "next": "12.1.5",
