--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
     "react-scroll": "^1.8.7",
+    "react-toastify": "^9.0.4",
     "reactstrap": "^9.0.2",
     "styled-components": "^5.3.5"
   },
