--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "aos": "^3.0.0-beta.6",
     "babel-plugin-styled-components": "^2.0.7",
     "next": "12.1.5",
+    "pure-react-carousel": "^1.28.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
     "react-scroll": "^1.8.7",
+    "react-styled-carousel": "^0.5.1",
     "react-toastify": "^9.0.4",
     "reactstrap": "^9.0.2",
     "styled-components": "^5.3.5"
