--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-styled-components": "^2.0.7",
     "gray-matter": "^4.0.3",
     "next": "12.1.5",
+    "next-pwa": "^5.5.5",
     "pure-react-carousel": "^1.28.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
