--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,31 @@
-
 {
-    "name": "Next.JS Progressive Web App",
-    "short_name": "Next PWA",
-    "theme_color": "#ffffff",
-    "background_color": "#004740",
-    "display": "fullscreen",
-    "orientation": "portrait",
+    "theme_color": "#f69435",
+    "background_color": "#f69435",
+    "display": "standalone",
     "scope": "/",
     "start_url": "/",
-    "icons": [ 
-      {
-        "src": "icons/icon-192x192.png",
-        "sizes": "192x192",
-        "type": "image/png"
-      } 
-    ],
-    "splash_pages": null
-  }
+    "name": "Hadis Soleymani",
+    "short_name": "Hadis Soleymani",
+    "icons": [
+        {
+            "src": "/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/icon-256x256.png",
+            "sizes": "256x256",
+            "type": "image/png"
+        },
+        {
+            "src": "/icon-384x384.png",
+            "sizes": "384x384",
+            "type": "image/png"
+        },
+        {
+            "src": "/icon-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ]
+}
